Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/cast/BoxedArray.out
BoxedArray.java:13:22: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Integer[], int[])
1 error
